--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
 
 <div id="contentdiv" class="container">
   <div class="row">
-    <div class="text-center">
-      <h1>Comedy Nodes website is coming......</h1>
+    <div class="text-center" style="margin-top:16px; padding: 24px; background-color: #eeeeff;">
+      <h1>Comedy Nodes</h1>
+      <h2>A new website is coming......</h2>
       <h3>In the meantime, please visit:<br />
          <a href="https://youtube.com/@comedynodes">https://youtube.com/@comedynodes</a></h3>
     </div>
@@ -25,9 +26,8 @@
 
 <div id="footerdiv" class="container">
   <div class="row">
-	  <div class="text-center">
-    	<p>&nbsp;<br />
-      © Copyright 2025 Youtube@ComedyNodes. All Rights Reserved.</p>
+	  <div class="text-center" style="padding: 24px; color: ffffff; background-color: #333333;">
+    	<p>© Copyright 2025 Youtube@ComedyNodes. All Rights Reserved.</p>
     </div>    
   </div>
 </div>
