--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <div id="footerdiv" class="container">
   <div class="row">
-	  <div class="text-center" style="padding: 24px; color: ffffff; background-color: #333333;">
+	  <div class="text-center" style="padding: 24px; color: #ffffff; background-color: #333344;">
     	<p>© Copyright 2025 Youtube@ComedyNodes. All Rights Reserved.</p>
     </div>    
   </div>
