--- a/index.html
+++ b/index.html
@@ -22,6 +22,15 @@
          <a href="https://youtube.com/@comedynodes">https://youtube.com/@comedynodes</a></h3>
     </div>
   </div>
+  <div class="row">
+    <div class="text-center" style="margin-top:16px; padding: 24px; background-color: #ffffff;" id="socialMedia11">
+      <video controls width="360" muted loop autoplay playsinline>
+        <source src="https://github.com/ComedyNodes/comedynodes.github.io/raw/refs/heads/main/files/newYear2026.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+      </video>     
+      <p>For free download: Put your mouse over the video and click the three dots in the bottom-right corner.</p>
+    </div>
+  </div>
 </div>
 
 <div id="footerdiv" class="container">
