--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     </div>
   </div>
   <div class="row">
-    <div class="text-center" style="margin-top:16px; padding: 24px; background-color: #ffffff;" id="socialMedia11">
-      <p>For free download: Put your mouse over the video and click the three dots in the bottom-right corner.</p>
-      <video controls width="360" playsinline>
+    <div class="text-center" style="height: 400px; margin-top:16px; padding: 24px; background-color: #ffffff;" id="socialMedia11">
+      <p>For free download: Put your mouse over the video and click the three dots in the bottom-right corner. (The video is muted on the webpage.)</p>
+      <video controls style="width:300px; height:300px;" muted loop autoplay playsinline>
         <source src="https://github.com/ComedyNodes/comedynodes.github.io/raw/refs/heads/main/files/newYear2026.mp4" type="video/mp4">
           Your browser does not support the video tag.
       </video>     
