--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
   </div>
   <div class="row">
-    <div class="text-center" style="height: 400px; margin-top:16px; padding: 24px; background-color: #ffffff;" id="socialMedia11">
+    <div class="text-center" style="height: 480px; padding: 24px; background-color: #ffffff;" id="socialMedia11">
       <h3>For free download videos: </h3>
       <p>Put your mouse over the video and click the three dots in the bottom-right corner.<br />(The videos are muted on the webpage.)</p>
       <video controls style="width:300px; height:300px;" muted loop autoplay playsinline>
